--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h2>News & Announcements</h2>
     <div class="news-item">
       <h3>C Code Clash</h3>
-      <p>TechSuperNova Presents C Code Clash 1.0!! Get ready This Winter to Code, Compete and Conquer.<br>Stay Tuned!!</p>
+      <p>🚀🚀--Comming Soon--🚀🚀</p>
     </div>
    
   </section>
