--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p>Email: techsupernova.nielitajm@gmail.com</p>
 <div>
       <a href="https://www.linkedin.com/company/techsupernova/">
-        <img src="download-removebg-preview (5)" height=20></a>
+        <img src="hello.png" height=30></a>
     </div>
     <p>&copy; 2024 TechSupernova. All rights reserved.</p>
   </footer>
