--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 <div>
       <a href="https://www.linkedin.com/company/techsupernova/">
         <img src="hello.png" height=30></a>
+      <a href="https://www.instagram.com/techsupernova_nielitajm">
+        <img src="insta.png"></a>
     </div>
     <p>&copy; 2024 TechSupernova. All rights reserved.</p>
   </footer>
