--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <a href="https://www.linkedin.com/company/techsupernova/">
         <img src="hello.png" height=30></a>
       <a href="https://www.instagram.com/techsupernova_nielitajm">
-        <img src="insta.png"></a>
+        <img src="insta.png" height=30></a>
     </div>
     <p>&copy; 2024 TechSupernova. All rights reserved.</p>
   </footer>
