--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Header Section -->
   <header>
     <div class="logo-container">
-      <img src="TechSuperNova.png" alt="TechSupernova Logo" class="logo">
+      <img src="TechSuperNova.png" alt="TechSupernova Logo" style="border-radius: 50%;" class="logo">
       <h1 class="club-name">TechSupernova</h1>
     </div>
   </header>
