--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <footer>
     <div class="contact">
       <h2>Contact Us</h2>
-      <p>Email: techsupernova.nielitajm@gmail.com</p>
+      <p>Email: <a href="mailto:techsupernova.nielitajm@gmail.com">techsupernova.nielitajm@gmail.com</a></p>
 <div>
       <a href="https://www.linkedin.com/company/techsupernova/">
         <img src="hello.png" height=30></a>
