--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <p>TechSupernova, the official technical quiz club of NIELIT Ajmer, is a vibrant community of tech enthusiasts committed to advancing knowledge and sparking curiosity in the fields of technology and innovation. The club offers students a dynamic platform to explore a wide array of topics, from programming fundamentals to cutting-edge developments and engineering aptitude. Through engaging quizzes, workshops, and events, TechSupernova fosters a culture of continuous learning, collaboration, and friendly competition. With each activity, the club aims to empower students with critical problem-solving skills and a deeper understanding of the latest technological trends, preparing them for a successful future in the digital world.</p>
   </section>
 
+  <section id="about-nielit">
+  <h2>About NIELIT Ajmer</h2>
+<img src="nielit.jfif" style="border-radius: 10px;" alt="NIELIT Ajmer Campus" class="nielit-photo">
+  <p>NIELIT Ajmer, a premier institution under the Ministry of Electronics and Information Technology, is dedicated to developing skilled professionals in the fields of IT, electronics, and communications. With state-of-the-art facilities and a focus on quality education, NIELIT Ajmer is at the forefront of technological advancement and research.NIELIT Ajmer Centre's objective is of creating skilled manpower in the area of Electronics ,Computer Science and Information Technology and related disciplines for making available industry ready professionals.The Institute offers training programmes to improve employment opportunites and facilitate availability of quality manpower,Which in turn will lead to growth of computer Science & IT industry in the State of Rajasthan & the Western Region .Apart from this ,the Institute is equipped with the infrastructure to facilitate and promote e-learning and provide consultancy services throughout the state ,specially in the field of office automation by undertaking designing and development of web based application for various Government department and Organizations to facilitate e-Governance . </p>
+</section>
+
   <!-- Latest Events Section -->
   <section id="events">
     <h2>Latest Events</h2>
