--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@
 <img src="nielit.jfif" style="border-radius: 10px;" alt="NIELIT Ajmer Campus" class="nielit-photo">
   <p>NIELIT Ajmer, a premier institution under the Ministry of Electronics and Information Technology, is dedicated to developing skilled professionals in the fields of IT, electronics, and communications. With state-of-the-art facilities and a focus on quality education, NIELIT Ajmer is at the forefront of technological advancement and research.NIELIT Ajmer Centre's objective is of creating skilled manpower in the area of Electronics ,Computer Science and Information Technology and related disciplines for making available industry ready professionals.The Institute offers training programmes to improve employment opportunites and facilitate availability of quality manpower,Which in turn will lead to growth of computer Science & IT industry in the State of Rajasthan & the Western Region .Apart from this ,the Institute is equipped with the infrastructure to facilitate and promote e-learning and provide consultancy services throughout the state ,specially in the field of office automation by undertaking designing and development of web based application for various Government department and Organizations to facilitate e-Governance . </p>
 </section>
-
+<!-- Heads Section -->
+<section id="heads">
+  <h2>Our Club Heads</h2>
+  <div class="head">
+    <img src="jigyasu_joshi.jpg" alt="Jigyasu Joshi" class="head-photo">
+    <h3>Jigyasu Joshi</h3>
+    <p>B.Tech 2nd Year, CSE</p>
+  </div>
+  <div class="head">
+    <img src="aditya_pandey.jpg" alt="Aditya Pandey" class="head-photo">
+    <h3>Aditya Pandey</h3>
+    <p>B.Tech 2nd Year, CSE</p>
+  </div>
+</section>
   <!-- Latest Events Section -->
   <section id="events">
     <h2>Latest Events</h2>
