--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 <section id="heads">
   <h2>Our Club Heads</h2>
   <div class="head">
-    <img src="jigyasu_joshi.jpg" alt="Jigyasu Joshi" class="head-photo">
+    <img src="image.jpg" alt="Jigyasu Joshi" class="head-photo">
     <h3>Jigyasu Joshi</h3>
     <p>B.Tech 2nd Year, CSE</p>
   </div>
   <div class="head">
-    <img src="aditya_pandey.jpg" alt="Aditya Pandey" class="head-photo">
+    <img src="image1.jpg" alt="Aditya Pandey" class="head-photo">
     <h3>Aditya Pandey</h3>
     <p>B.Tech 2nd Year, CSE</p>
   </div>
