--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 </section>
 <!-- Heads Section -->
 <section id="heads">
-  <h2>Our Club Heads</h2>
+  <h2>Our Team</h2>
   <div class="head">
     <img src="image.png" alt="Jigyasu Joshi" class="head-photo">
     <h3>Jigyasu Joshi</h3>
-    <a href="www.linkedin.com/in/jigyasu-joshi-438b5b268"><img src="hello.png"> </a>
+    <a href="www.linkedin.com/in/jigyasu-joshi-438b5b268"><img src="hello.png" height=30> </a>
     <p>B.Tech 2nd Year, CSE</p>
   </div>
   <div class="head">
