--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <div class="head">
     <img src="image1.png" alt="Aditya Pandey" class="head-photo">
     <h3>Aditya Pandey</h3>
+    <a href="https://www.linkedin.com/in/aditya-pandey-94093a2a4/"><img src="hello.png" height=30> </a>
     <p>B.Tech 2nd Year, CSE</p>
   </div>
 </section>
