--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </section>
 <!-- Heads Section -->
 <section id="heads">
-  <h2>Our Team</h2>
+  <h2>Our Team<br> Leads</h2>
   <div class="head">
     <img src="image.png" alt="Jigyasu Joshi" class="head-photo">
     <h3>Jigyasu Joshi</h3>
