--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="head">
     <img src="image.png" alt="Jigyasu Joshi" class="head-photo">
     <h3>Jigyasu Joshi</h3>
-    <a href="www.linkedin.com/in/jigyasu-joshi-438b5b268"><img src="hello.png" height=30> </a>
+    <a href="https://www.linkedin.com/in/jigyasu-joshi-438b5b268/"><img src="hello.png" height=30> </a>
     <p>B.Tech 2nd Year, CSE</p>
   </div>
   <div class="head">
