--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
         <img src="insta.png" height=30></a>
     </div>
     <p>&copy; 2024 TechSupernova. All rights reserved.</p>
+      <h2>Our Visitors</h2>
+<div id="sfc6zkzsnefk8ssn3fe2ducwmfdch7pzfxs"></div>
+<script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=6zkzsnefk8ssn3fe2ducwmfdch7pzfxs&down=async" async></script>
+<noscript>
+    <a href="https://www.freecounterstat.com" title="web counter">
+        <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=6zkzsnefk8ssn3fe2ducwmfdch7pzfxs" border="0" title="web counter" alt="web counter">
+    </a>
+</noscript>
+
   </footer>
 </body>
 </html>
