--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       <h3>C Code Clash</h3>
       <p>🚀🚀--Comming Soon--🚀🚀</p>
     </div>
+    <div class="news-item">
+      <h3>Schedule For Club Activities-</h3>
+      <p><a href="Technical Quiz.pdf" >Click Here</a> to Download Schedule for club Activities</p>
+    </div>
    
   </section>
 
