--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="news-item">
       <h3>Schedule For Club Activities-</h3>
-      <p><a href="Technical Quiz.pdf" >Click Here</a> to Download Schedule for club Activities</p>
+      <p><a href="Technical Quiz (2).pdf" >Click Here</a> to Download Schedule for club Activities</p>
     </div>
    
   </section>
