--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="news-item">
       <h3>Schedule For Club Activities-</h3>
-      <p><a href="Technical Quiz (2).pdf" >Click Here</a> to Download Schedule for club Activities</p>
+      <p><a href="Activity Schedule.pdf" >Click Here</a> to Download Schedule for club Activities</p>
     </div>
    
   </section>
@@ -84,7 +84,7 @@
         <img src="insta.png" height=30></a>
     </div>
     <p>&copy; 2024 TechSupernova. All rights reserved.</p>
-      <p> Last Updated on- 23-11-2024 11:22:28 </p>
+      <p> Last Updated on- 26-11-2024 19:57:46 </p>
       <h2>Our Visitors</h2>
 <div id="sfc6zkzsnefk8ssn3fe2ducwmfdch7pzfxs"></div>
 <script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=6zkzsnefk8ssn3fe2ducwmfdch7pzfxs&down=async" async></script>
