--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
   <section id="news">
     <h2>News & Announcements</h2>
     <div class="news-item">
-      <h3>C Code Clash</h3>
-      <p>🚀🚀--Comming Soon--🚀🚀</p>
+      <h3>TechWhiz 2k24</h3>
+      <p>The link for Day-II Quiz <button onclick="windows.location.href="https://forms.gle/fsNuptVzf6XgzUTq5";">Start</button></p>
     </div>
     <div class="news-item">
       <h3>Schedule For Club Activities-</h3>
