--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <h2>News & Announcements</h2>
     <div class="news-item">
       <h3>TechWhiz 2k24</h3>
-      <p>The link for Day-II Quiz <button onclick="windows.location.href="https://forms.gle/fsNuptVzf6XgzUTq5";">Start</button></p>
+      <p>The link for Day-II Quiz <a href="https://forms.gle/fsNuptVzf6XgzUTq5">Start</a></p>
     </div>
     <div class="news-item">
       <h3>Schedule For Club Activities-</h3>
