--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <section id="contacts">
    
     <h2>NIELIT Ajmer Clubs connect</h2>
-    <div class="news-iteams">
+    <div class="news-iteam">
       <h2>Updating Shortly....</h2>
       
       
