--- a/index.html
+++ b/index.html
@@ -43,6 +43,44 @@
     <p>B.Tech 2nd Year, CSE</p>
   </div>
 </section>
+<section id="heads1">
+  <h2>Our Co-ordinators</h2>
+  <div class="head">
+    <img src="shivam.jpg" alt="Shivam" class="head-photo">
+    <h3>Shivam<br>Executive Co-ordinator</h3>
+    <p>B.Tech 1st Year, CSE</p>
+  </div>
+  <div class="head">
+    <img src="Madhusudan.jpeg" alt="Madhusudan Tiwari" class="head-photo">
+    <h3>Madhusudan Tiwari<br>Strategic Co-ordinator</h3>
+    <p>B.Tech 1st Year, CSE</p>
+  </div>
+  <div class="head">
+    <img src="devid.jpeg" alt="Devid" class="head-photo">
+    <h3>Devid Joshi<br>Strategic Co-ordinator</h3>
+   
+    <p>B.Tech 1st Year, CSE</p>
+  </div>
+  <div class="head">
+    <img src="Shreyas.jpeg" alt="Shreyas" class="head-photo">
+    <h3>Shreyas Mishra<br>Strategic Co-ordinator</h3>
+    <p>B.Tech 1st Year, CSE</p>
+  </div><div class="head">
+    <img src="Chetanya.jpeg" alt="Chetanya" class="head-photo">
+    <h3>Chetanya Sharma<br>Content Manager</h3>
+    <p>B.Tech 1st Year, CSE</p>
+  </div>
+  <div class="head">
+    <img src="Harmeet.jpeg" alt="Harmeet" class="head-photo">
+    <h3>Harmeet Singh<br>Content Manager</h3>
+    <p>B.Tech 1st Year, CSE</p>
+  </div>
+  <div class="head">
+    <img src="Mahendra.jpeg" alt="Mahendra" class="head-photo">
+    <h3>Mahendra Choudhary<br>Content Manager</h3>
+    <p>B.Tech 1st Year, CSE</p>
+  </div>
+</section>
 
   <section id="contacts">
    
@@ -110,3 +148,4 @@
   </footer>
 </body>
 </html>
+
