--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <a href="https://www.linkedin.com/in/aditya-pandey-94093a2a4/"><img src="hello.png" height=30> </a>
     <p>B.Tech 2nd Year, CSE</p>
   </div>
-</section>/*
+</section>
+  <!--
 <section id="heads1">
   <h2>Our Co-ordinators</h2>
   <div class="head">
@@ -81,7 +82,7 @@
     <p>B.Tech 1st Year, CSE</p>
   </div>
 </section>
-*/
+-->
   <section id="contacts">
    
     <h2>NIELIT Ajmer Clubs connect</h2>
