--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="news-card">
                 <h3>Club Activity schedule</h3>
                 <p>[26-11-2024] Download Below the activity Time Table for Club Activities</p>
-                <a href="#">Activity Time Table</a>
+                <a href="Activity Schedule.pdf">Activity Time Table</a>
                 <p>Mandatary Public Disclosure(List Of all the Associated Members with the Club)</p>
                 <a href="">Members Data(2024-25)</a>
             </div>
