--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <h3>Phone</h3>
                 
                 <p>+91 8741066047</p>
-                <p>For any Query,Suggestion and Colaboration Contact us on the  via Whatsapp(on the above Number) and Email Only</p>
+                <p>For any Query,Suggestion and Colaboration Contact us via Whatsapp(on the above Number) or Email Only</p>
             </div>
             <div class="contact-card">
                 <h3>Location</h3>
