--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
         <h2>Upcoming Events</h2>
         <div class="events-grid">
             <div class="event-card">
-                <h3>Workshop on Basics Of Internet Of Things(IOT)</h3>
-                <p>COMMING SOON</p>
+                <h3>Brains & Bots 1.0</h3>
+                <p>Brains and Bots 1.0, hosted by TechSupernova at NEILIT Ajmer, wasn’t just another tech gathering — it was a wake-up call. In two power-packed days, we explored what many campuses are still struggling to define: from the real-world impact of AI, ML, LLMs, RAG, and Agentic AI, to deep dives into cybersecurity, networking, Blockchain, Web3, and the future of tech-driven systems. We tore into the hype, questioned the norms with our “Vibe Coding” segment, and sparked conversations that matter. Day 2 brought a sharp quiz to lock in insights, recognize top minds, and reward everyone who showed up ready to think differently. This wasn’t just about knowledge — it was about attitude, clarity, and leading from the front. Still watching from the sidelines? Register below and be part of the shift.</p>
+            </br>
+                <button class="event" onclick="window.location.href='https://forms.gle/rk36wxchsLAfHxqe6';">Register Now</button>
+          
+                <button class="event" style="background-color: rgb(0, 187, 255);" ><a style="text-decoration: none; color: black;" href="main.pdf">Download Brochure</a></button>
             </div>
             <div class="event-card">
                 <h3>Seminar on the Evolution of Software Industry</h3>
