--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div class="slide active" style="background-image: url('Events\ \(2\).png');"></div>
             <div class="slide" style="background-image: url('WhatsApp\ Image\ 2025-01-28\ at\ 10.54.18\ PM.jpeg');"></div>
             <div class="slide" style="background-image: url('WhatsApp\ Image\ 2025-01-29\ at\ 12.17.02\ AM.jpeg');"></div>
+            <div class="slide" style="background-image: url('b&b1.jpeg');"></div>
         </div>
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <button class="next" onclick="nextSlide()">&#10095;</button>
