--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="slide" style="background-image: url('WhatsApp\ Image\ 2025-01-28\ at\ 10.54.18\ PM.jpeg');"></div>
             <div class="slide" style="background-image: url('WhatsApp\ Image\ 2025-01-29\ at\ 12.17.02\ AM.jpeg');"></div>
             <div class="slide" style="background-image: url('b&b1.jpeg');"></div>
+            <div class="slide" style="background-image: url('b&b2.jpeg');"></div>
         </div>
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <button class="next" onclick="nextSlide()">&#10095;</button>
@@ -72,6 +73,7 @@
                 <button class="event" onclick="window.location.href='https://forms.gle/rk36wxchsLAfHxqe6';">Register Now</button>
           
                 <button class="event" style="background-color: rgb(0, 187, 255);" ><a style="text-decoration: none; color: black;" href="main.pdf">Download Brochure</a></button>
+                <p><i>*This Event has Ended [5-7 May 2025]</i></p>
             </div>
             <div class="event-card">
                 <h3>Seminar on the Evolution of Software Industry</h3>
