--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="menu" id="menu">
             <a href="#home">Home</a>
             <a href="#gallery">Picture Gallery</a>
-            <a href="#about">About Us</a>
+            <a href="about.html">About Us</a>
         </div>
         <button class="nav-toggle" id="nav-toggle">☰</button>
     </nav>
