--- a/about.html
+++ b/about.html
@@ -98,8 +98,8 @@ This is just the beginning of a remarkable journey—and we’re excited for wha
         <div class="container mx-auto text-center">
             <p>&copy; 2025 <a style="color: white;" href="https://www.tinyurl.com/techsupernova">Techsupernova</a>. All rights reserved.</p>
             <p class="mt-2">
-                <a href="https://www.tinyurl.com/privacytechsupernova" class="text-gray-300 hover:text-white">Privacy Policy</a> |
-                <a href="https://www.tinyurl.com/termstechsupernova" class="text-gray-300 hover:text-white">Terms of Service</a>
+                <a href="pp.html" class="text-gray-300 hover:text-white">Privacy Policy</a> |
+                <a href="tos.html" class="text-gray-300 hover:text-white">Terms of Service</a>
                 
             </p>
         </div>
