--- a/pp.html
+++ b/pp.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p><strong>Effective Date:</strong> [Insert Date]</p>
+  <p><strong>Effective Date:</strong> 17 May 2025</p>
 
   <p>At TechSupernova, we value your privacy. This policy explains how we collect and use your information.</p>
 
@@ -31,10 +31,7 @@
   <h2>5. Security</h2>
   <p>We use reasonable measures to protect your data, though no method is completely secure.</p>
 
-  <h2>6. Children’s Privacy</h2>
-  <p>This website is not intended for children under 13. We do not knowingly collect their data.</p>
-
-  <h2>7. Changes to This Policy</h2>
+  <h2>6.. Changes to This Policy</h2>
   <p>We may update this policy from time to time. Please check back periodically.</p>
 
   <p><strong>Contact:</strong> techsupernova.nielitajm@gmail.com / +91 8741066047</p>
