--- a/tos.html
+++ b/tos.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <h1>Terms of Service</h1>
-  <p><strong>Effective Date:</strong> [Insert Date]</p>
+  <p><strong>Effective Date:</strong> 17 May 2025</p>
 
   <p>Welcome to TechSupernova, operated by students of NIELIT Ajmer. By accessing or using our website, you agree to the following terms and conditions:</p>
 
