--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="menu" id="menu">
             <a href="#home">Home</a>
-            <a href="#gallery">Picture Gallery</a>
+            <a href="galary.html">Picture Gallery</a>
             <a href="about.html">About Us</a>
         </div>
         <button class="nav-toggle" id="nav-toggle">☰</button>
