--- a/galary.html
+++ b/galary.html
@@ -22,10 +22,10 @@
     <!-- Event Block -->
     <div x-data="{ open: false, index: 0, images: ['https://via.placeholder.com/600x400', 'https://via.placeholder.com/600x401'] }">
       <div class="rounded-lg shadow-lg overflow-hidden cursor-pointer group" @click="open = true">
-        <img src="b&b1" alt="Event 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
-        <img src="b&b2" alt="Event 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
-        <img src="b&b4" alt="Event 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
-        <img src="b&b5" alt="Event 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+        <img src="b&b1.jpeg" alt="Event 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+        <img src="b&b2.jpeg" alt="Event 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+        <img src="b&b4.jpeg" alt="Event 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+        <img src="b&b5.jpeg" alt="Event 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
         <div class="p-4 bg-white">
           <h2 class="text-xl font-semibold">Brains and Bots 1.0</h2>
           <p class="text-sm text-gray-500">4-5 May 2025</p>
