--- a/galary.html
+++ b/galary.html
@@ -13,19 +13,17 @@
 <body class="bg-gray-100 text-gray-800">
 
   <header class="text-center py-6 bg-white shadow-md">
-    <h1 class="text-3xl font-bold">Event Galary</h1>
+    <h1 class="text-3xl font-bold">Event Gallery</h1>
     <p class="text-gray-500">“Smiles, bugs, and blurry clicks — all part of the beautiful mess we call memories 💖🖥️📸”</p>
   </header>
 
   <main class="p-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-w-7xl mx-auto">
 
     <!-- Event Block -->
-    <div x-data="{ open: false, index: 0, images: ['https://via.placeholder.com/600x400', 'https://via.placeholder.com/600x401'] }">
+    <div x-data="{ open: false, index: 0, images: ['b&b1.jpeg', 'b&b2.jpeg', 'b&b4.jpeg', 'b&b5.jpeg'] }">
       <div class="rounded-lg shadow-lg overflow-hidden cursor-pointer group" @click="open = true">
-        <img src="b&b1.jpeg" alt="Event 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
-        <img src="b&b2.jpeg" alt="Event 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
-        <img src="b&b4.jpeg" alt="Event 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
-        <img src="b&b5.jpeg" alt="Event 1" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+        <!-- Show only the first image as thumbnail -->
+        <img :src="images[0]" alt="Brains and Bots 1.0" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
         <div class="p-4 bg-white">
           <h2 class="text-xl font-semibold">Brains and Bots 1.0</h2>
           <p class="text-sm text-gray-500">4-5 May 2025</p>
@@ -35,7 +33,7 @@
       <!-- Modal -->
       <div x-show="open" class="fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center z-50" x-transition>
         <div class="bg-white w-full max-w-3xl p-4 rounded-lg relative" @click.away="open = false">
-          <button class="absolute top-2 right-2 text-gray-600 hover:text-black" @click="open = false">✕</button>
+          <button class="absolute top-2 right-2 text-gray-600 hover:text-black text-xl" @click="open = false">✕</button>
 
           <div class="flex flex-col items-center">
             <img :src="images[index]" alt="Slide Image" class="rounded-lg w-full h-72 object-cover">
@@ -48,7 +46,13 @@
       </div>
     </div>
 
-    <!-- Duplicate the above block for other events with different images and titles -->
+    <!-- Duplicate this block for other events -->
+
+  </main>
+
+</body>
+</html>
+
 
   </main>
 
