--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
             <a href="https://www.tinyurl.com/techsupernova" class="text-xl font-bold text-gray-800"><img src="TechSuperNova-removebg-preview.png" alt="TechSupernova"></a>
             <ul class="flex space-x-4">
                 <li><a href="index.html" class="text-gray-600 hover:text-gray-800">Home</a></li>
-                <li><a href="/" class="text-gray-600 hover:text-gray-800">About Us</a></li>
-                <li><a href="/" class="text-gray-600 hover:text-gray-800">Image Galary</a></li>
+                <li><a href="about.html" class="text-gray-600 hover:text-gray-800">About </a></li>
+                <li><a href="galary.html" class="text-gray-600 hover:text-gray-800">Galary</a></li>
                
             </ul>
         </div>
