--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechSupernova - NIELIT Ajmer</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="TechSuperNova.png" type="image/x-icon">
 </head>
 <body>
     <!-- Navbar -->
@@ -124,9 +125,9 @@
                 <h3>Social Media</h3>
                 <p>
                     <div id="con">
-                    <img src="download-removebg-preview (6).png"><a href="https://instagram.com/techsupernova_nielitajm"><p>Instagram</p></a>
+                    <img src="download-removebg-preview (6).png"><a style="color: black; text-decoration: none;" href="https://instagram.com/techsupernova_nielitajm"><p>Instagram</p></a>
                     <pre>   </pre>
-                    <img src="download-removebg-preview (5).png"><a href="https://linkedin.com/company/techsupernova"><p>LinkedIn</p></a>
+                    <img src="download-removebg-preview (5).png"><a  style="color: black; text-decoration: none;" href="https://linkedin.com/company/techsupernova"><p>LinkedIn</p></a>
                     </div>
                 </p>
             </div>
