new update on privacy policy

--- a/pp.html
+++ b/pp.html
@@ -31,7 +31,7 @@
   <h2>5. Security</h2>
   <p>We use reasonable measures to protect your data, though no method is completely secure.</p>
 
-  <h2>6.. Changes to This Policy</h2>
+  <h2>6. Changes to This Policy</h2>
   <p>We may update this policy from time to time. Please check back periodically.</p>
 
   <p><strong>Contact:</strong> techsupernova.nielitajm@gmail.com / +91 8741066047</p>
